Last version help files

--- a/tigahelp/templates/tigahelp/project_about_el.html
+++ b/tigahelp/templates/tigahelp/project_about_el.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block page_title %}
-Τι είαι το Mosquito Alert;
+Τι είναι το Mosquito Alert;
 {% endblock %}
 
 {% block content %}
@@ -18,7 +18,7 @@
         </div>
 
 
-        <h2>Τι είαι το Mosquito Alert;</h2>
+        <h2>Τι είναι το Mosquito Alert;</h2>
         <p>Το Mosquito Alert είναι μια πλατφόρμα επιστήμης πολιτών που διευκολύνει τη συνεργασία μεταξύ διαφόρων ατόμων
             για τη μελέτη, την παρακολούθηση και τον έλεγχο των ειδών κουνουπιών που μεταφέρουν ασθένειες όπως ο
             Δάγκειος πυρετός, ο Zika, ο Chikungunya και ο ιός του Δυτικού Νείλου.</p>
@@ -26,9 +26,9 @@
             Mosquito Alert επιτρέπει σε οποιονδήποτε να συλλέγει και να μοιράζεται δεδομένα (1) και να συμμετέχει στην
             επικύρωση δεδομένων μαζί με επαγγελματίες εντομολόγους, οι οποίοι επισημαίνουν τις αναφορές κουνουπιών και
             ανταποκρίνονται στους συμμετέχοντες (2). Μόλις επικυρωθούν, τα δεδομένα καθίστανται διαθέσιμα στο ευρύ κοινό
-            μέσω διαδικτυακού διαδραστικού χάρτη (3). Στηρίζεται επίσης από επιστήμονες (4) και από φορείς δημόσιας
-            υγείας (5) για να μελετήσει και να παρακολουθήσει τα κουνούπια που είναι διαβιβαστές των ασθενειών που
-            αναφέρθηκαν.</p>
+            μέσω διαδικτυακού διαδραστικού χάρτη (3). Επίσης, το έργο, στηρίζεται από επιστήμονες (4) και από φορείς
+            δημόσιας υγείας (5) προκειμένου να μελετήσει και να παρακολουθήσει τα κουνούπια που είναι διαβιβαστές των
+            ασθενειών που αναφέρθηκαν.</p>
 
         <p class="centeredImage">
 
@@ -40,15 +40,16 @@
         <h2>Γιατί είναι χρήσιμο το Mosquito Alert;</h2>
         <p>Τις τελευταίες δεκαετίες ο αριθμός των ξενικών κουνουπιών και των αναδυόμενων ασθενειών που μεταδίδονται από
             αυτά τα κουνούπια έχει αυξηθεί σε παγκόσμια κλίμακα. Νέα εισβάλλοντα χωροκατακτητικά είδη, κυρίως του γένους
-            Aedes, έχουν εγκατασταθεί σε νέες περιοχές και συνεχίζουν να επεκτείνονται. Η διαχείριση των κουνουπιών του
-            γένους Aedes είναι απαραίτητη για την προστασία της δημόσιας υγείας λόγω της ικανότητάς τους να μεταδίδουν
-            ασθένειες όπως ο Δάγκειος πυρετός, ο Zika και ο ιός Chikungunya. Ομοίως, απαιττίται διαχείριση και για το
-            κοινό κουνούπι (Culex pipiens) επειδή μπορεί να μεταδώσει τον ιό του Δυτικού Νείλου.</p>
+            <em>Aedes</em>, έχουν εγκατασταθεί σε νέες περιοχές και συνεχίζουν να επεκτείνονται. Η διαχείριση των
+            κουνουπιών του γένους <em>Aedes</em> είναι απαραίτητη για την προστασία της δημόσιας υγείας λόγω της
+            ικανότητάς τους να μεταδίδουν ασθένειες όπως ο Δάγκειος πυρετός, ο Zika και ο ιός Chikungunya. Ομοίως,
+            απαιτείται και η διαχείριση για το κοινό κουνούπι (<em>Culex pipiens</em>) επειδή μπορεί να μεταδώσει τον ιό
+            του Δυτικού Νείλου. </p>
         <p>Δεδομένης της πολυπλοκότητας του προβλήματος, το Mosquito Alert υποστηρίζει την παρακολούθηση και την έρευνα
-            των κουνουπιών στο κοινό, επιτρέποντας τη συνεργασία μεταξύ διαφορετικών φορέων, πλατφορμών και κοινοτήτων
-            μέσω της εφαρμογής της.</p>
+            των κουνουπιών στο κοινό, επιτρέποντας παράλληλα, μέσω της εφαρμογής της, τη συνεργασία με άλλες πλατφόρμες
+            και κοινότητες που ασχολούνται με τη διαχείριση των κουνουπιών.</p>
         <h2>Τι δεδομένα συλλέγονται;</h2>
-        <p>Τα δεδομένα συλλέγονται για 5 διαφορετικά είδη κουνουπιών: το Ασιατικό κουνούπι τίγρης (<em>Aedes
+        <p>Τα δεδομένα που συλλέγονται αφορούν στα εξής 5 διαφορετικά είδη κουνουπιών: το Ασιατικό κουνούπι τίγρης (<em>Aedes
             albopictus</em>), το κουνούπι του κίτρινου πυρετού (<em>Aedes aegypti</em>), το "ιαπωνέζικο κουνούπι" (<em>Aedes
             japonicus</em>), το "κορεάτικο κουνούπι" (<em>Aedes koreicus</em>) και το κοινό κουνούπι (<em>Culex
             pipiens</em>).</p>
@@ -62,7 +63,7 @@
 
         <p>Για αυτά τα είδη, συλλέγονται δεδομένα για τα ενήλικα (ακμαία) κουνούπια, τις εστίες ανάπτυξής τους καθώς και
             τα τσιμπήματά τους. Όλα αυτά τα δεδομένα είναι σημαντικά για την καλύτερη κατανόηση αυτών των ειδών αλλά και
-            για την παρακολούθηση και τον έλεγχό τους.</p>
+            για την διαχείρισή τους.</p>
 
 
         <p class="centeredImage">
@@ -78,9 +79,9 @@
             πριν αποσταλούν στο διακομιστή Mosquito Alert. Για λόγους απορρήτου, μόνο το αναγνωριστικό τετράγωνο δικτύου
             αποστέλεται στο Mosquito Alert και όχι η ακριβής τοποθεσία. Αυτές οι πληροφορίες είναι εξαιρετικά πολύτιμες
             καθώς επιτρέπει στους ερευνητές να κάνουν καλύτερες εκτιμήσεις σχετικά με τους πληθυσμούς κουνουπιών,
-            διακρίνοντας για παράδειγμα, σημεία/περιοχές με μικρό πληθυσμό κουνουπιών σε σχέση με σημεία/περιοχές με
+            διακρίνοντας για παράδειγμα σημεία/περιοχές με μικρό πληθυσμό κουνουπιών σε σχέση με σημεία/περιοχές με
             λίγους συμμετέχοντες αλλά πιθανώς πολλά κουνούπια. Οι τοποθεσίες των συμμετεχόντων παρέχουν πληροφορίες
-            σχετικά με αυτό που είναι γνωστό στην επσιτήμη της οικολογία ως προσπάθεια δειγματοληψίας.</p>
+            σχετικά με αυτό που είναι γνωστό στην επιστήμη της οικολογία ως προσπάθεια "δειγματοληψίας".</p>
 
 
         <p class="centeredImage">
@@ -106,12 +107,13 @@
                 την κατά προσέγγιση θέση της συσκευής σε τυχαίες ώρες της ημέρας. Οι θέσεις καλύπτονται σε ένα πλέγμα
                 περίπου 2x2 km για την προστασία της ιδιωτικής ζωής.
             </li>
-            <li type="disc">Οι εργασίες βρίσκονται σε εξέλιξη για την ανάπτυξη ενός συστήματος πρόβλεψης κινδύνου σε
-                πραγματικό χρόνο, συμμετοχής και δυναμικού επιδημιολογικού κινδύνου.
+            <li type="disc">Οι Συντονιστές και ορισμένοι Συνεργαζόμενοι φορείς εκτελούν εργασίες που βρίσκονται σε
+                εξέλιξη προκειμένου να γίνει η ανάπτυξη ενός συστήματος πρόβλεψης κινδύνου της δημόσιας υγείας σε
+                πραγματικό χρόνο (κίνδυνος από τους διαβιβαστές και τις ασθένειες που μπορούν να μεταδώσουν).
             </li>
         </ul>
-        <h2>Πού μπορείς να βρεις περισσότερες πληροφορίες;</h2>
-        <p>Θα βρείς περισσότερες πληροφορίες στον ιστότοπο και τα κοινωνικά μέσα του έργου:</p>
+        <h2>Πού μπορείτε να βρείτε περισσότερες πληροφορίες;</h2>
+        <p>Περισσότερες πληροφορίες θα βρείτε στον ιστότοπο και τα κοινωνικά μέσα του έργου: </p>
         <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>Στις ρυθμίσεις της εφαρμογής θα βρείτε ένα εγχειρίδιο χρήσης που θα σας βοηθήσει να εντοπίσετε κουνούπια, την
             πολιτική απορρήτου καθώς και τους όρους χρήσης και πληροφορίες σχετικά με τους Φορείς που βρίσκονται πίσω
