--- a/tigahelp/templates/tigahelp/terms_el.html
+++ b/tigahelp/templates/tigahelp/terms_el.html
@@ -13,56 +13,56 @@
 </div>
 
 <p>Το Mosquito Alert (με οποιοδήποτε από τα ονόματα που μπορεί να είχε στο παρελθόν ή μπορεί να αποκτήσει στο μέλλον)
-    είναι ένα ηλεκτρονικό σύστημα επιστήμης πολιτών που διαχειρίζεται το Κέντρο Προηγμένων Μελετών Blanes του Ισπανικού
-    Εθνικού Συμβουλίου Έρευνας (CEAB-CSIC), το Κέντρο Οικολογικής Έρευνας και Δασικών Εφαρμογών (CREAF), το Πανεπιστήμιο
-    Pompeu Fabra (UPF) και το Καταλανικό Ινστιτούτο Έρευνας και Προχωρημένων Σπουδών (ICREA).</p>
-<p>Το Mosquito Alert εξαρτάται από τη συλλογή δεδομένων από το κοινό σχετικά με διάφορα είδη κουνουπιών που μπορεί να
-    είναι φορείς ασθενειών. Οι πολίτες συμμετέχουν στέλνοντας και κοινοποιώντας, δεδομένα και εικόνες, μέσω των διαφόρων
-    εφαρμογών Mosquito Alert για κινητές και άλλες ηλεκτρονικές συσκευές. Οι συμμετέχοντες πρέπει να είναι ενήλικες ή
-    στην αντιθετη περίπτωση θα πρέπει να συμμετέχουν υπό την επίβλεψη ενός ενήλικα, σύμφωνα με τη νομοθεσία της Ισπανίας
-    και της χώρας διαμονής τους. Οι συμμετέχοντες πρέπει επίσης να αποδεχθούν την πολιτική απορρήτου του Mosquito Alert
-    και να συμφωνήσουν με τους ακόλουθους όρους χρήσης:</p>
+    είναι ένα ηλεκτρονικό σύστημα επιστήμης πολιτών που διαχειρίζονται τα Ιδρύματα CREAF (Centre de Recerca Ecològica i
+    Aplicacions Forestals), UPF (Universitat Pompeu Fabra) ICREA (Institución Catalana de Investigación y Estudios
+    Avanzados) και CEAB-CSIC (Centro de Estudios Avanzados de Blanes).</p>
+<p>Η λειτουργία του Mosquito Alert εξαρτάται από τη συλλογή δεδομένων που γίνονται από το κοινό (πολίτες) αναφορικά με
+    διάφορα είδη κουνουπιών που μπορεί να είναι διαβιβαστές ασθενειών. Οι πολίτες συμμετέχουν στέλνοντας και
+    κοινοποιώντας δεδομένα και εικόνες μέσω των διαφόρων εφαρμογών Mosquito Alert για κινητές και άλλες ηλεκτρονικές
+    συσκευές. Οι συμμετέχοντες πρέπει να είναι ενήλικες ή στην αντίθετη περίπτωση θα πρέπει να συμμετέχουν υπό την
+    επίβλεψη ενός ενήλικα, σύμφωνα με τη νομοθεσία της Ισπανίας και της χώρας διαμονής τους. Οι συμμετέχοντες πρέπει
+    επίσης να αποδεχθούν την πολιτική απορρήτου του Mosquito Alert και να συμφωνήσουν με τους ακόλουθους όρους
+    χρήσης:</p>
 <ol>
     <li>Τα είδη κουνουπιών με τα οποία ασχολείται το Mosquito Alert μπορούν να είναι διαβιβαστές ασθενειών όπως είναι ο
-        Δάγκειος πυρετός,ο ιός Chikungunya και o Zika. Το Mosquito Alert συμβάλλει στην καταπολέμηση αυτών των
-        ασθενειών, συλλέγοντας δεδομένα και εικόνες, αναλύοντας αυτές τις πληροφορίες και πραγματοποιώντας
-        δραστηριότητες ευαισθητοποίησης των πολιτών, παρακολούθησης και ελέγχου των κουνουπιών. Καθώς αυτά τα κουνούπια
-        είναι διαβιβαστές ασθενειών, με τη συμμετοχή σας στο Mosquito Alert πρέπει να είστε ιδιαίτερα προσεκτικοί και
-        δεν πρέπει να αναζητάτε αυτά τα είδη (άμεσα ή στους χώρους αναπαραγωγής τους), ειδικά σε μέρη όπου οι ασθένειες
-        που μεταδίδονται είναι ενδημικές ή κατά τη διάρκεια έξαρσης μιας τέτοιας ασθένειας. Η συμμετοχή στο Mosquito
-        Alert μπορεί να περιλαμβάνει αναφορές των παρουσίας των κουνουπιών κατά την εκτέλεση των φυσιολογικών
-        δραστηριοτήτων σας, αλλά και τροποποίηση των δρατηριοτήτων σας προκειμένου ν' έχετε μειωμένη έκθεση σε κουνούπια
-        και στους χώρους αναπαραγωγής τους. Αποδέχεστε ότι δεν πρέπει με κανέναν τρόπο να αυξήσετε την έκθεσή σας σε
-        κουνούπια συμμετέχοντας σε αυτό το έργο.
+        Δάγκειος πυρετός, ο ιός Chikungunya και o Zika. Το Mosquito Alert συμβάλλει στη διαχείριση αυτών των ασθενειών
+        συλλέγοντας και αναλύοντας δεδομένα και εικόνες, πραγματοποιώντας δραστηριότητες ενημέρωσης των πολιτών καθώς
+        και παρακολούθησης και ελέγχου των κουνουπιών. Καθώς τα κουνούπια είναι διαβιβαστές ασθενειών με τη συμμετοχή
+        σας στο Mosquito Alert πρέπει να είστε ιδιαίτερα προσεκτικοί και δεν πρέπει να αναζητάτε αυτά τα είδη (άμεσα ή
+        στους χώρους αναπαραγωγής τους) ειδικά σε μέρη όπου οι ασθένειες που μεταδίδονται από αυτά είναι ενδημικές ή
+        κατά τη διάρκεια έξαρσης μιας τέτοιας ασθένειας. Η συμμετοχή στο Mosquito Alert μπορεί να περιλαμβάνει αναφορές
+        της παρουσίας των κουνουπιών κατά την εκτέλεση ή τροποποίηση των καθημερινών δραστηριοτήτων σας, προκειμένου ν'
+        έχετε μειωμένη έκθεση σε κουνούπια. Αποδέχεστε ότι δεν πρέπει με κανέναν τρόπο να αυξήσετε την έκθεσή σας στα
+        κουνούπια συμμετέχοντας σ' αυτό το έργο.
     </li>
-    <li>Με την κοινοποίηση του έργου σας (πχ δεδομένων, φωτογραφιών και αναφορών σας) στο Mosquito Alert συμφωνείτε με
-        αυτούς τους όρους χρήσης και αποδέχεστε ότι θα διαδοθούν ανώνυμα χωρίς να δηλώσετε το όνομά σας ή το ψευδώνυμό
-        σας. Επίσης αποδέχεστε ότι παραχωρείτε στα Ιδρύματα που διαχειρίζοντι το Mosquito Alert την άδεια για το έργο
-        σας διάρκειας ίσο με τα ισχύοντα πνευματικά δικαιώματα προκειμένου να μπορεί να είναι εκμεταλλεύσιμο το έργο
-        χωρίς κανένα περιορισμό και ότι το εκχωρείτε σε τρίτα πρόσωπα παγκοσμίως, χωρίς περιορισμό στο δικαίωμα
+    <li>Με την κοινοποίηση του έργου σας (π.χ. δεδομένων, φωτογραφιών και αναφορών σας) στο Mosquito Alert συμφωνείτε με
+        αυτούς τους όρους χρήσης και αποδέχεστε ότι θα διαδοθούν ανώνυμα (χωρίς να δηλώσετε το όνομά σας ή το ψευδώνυμό
+        σας). Επίσης, αποδέχεστε ότι παραχωρείτε στα Ιδρύματα που διαχειρίζονται το Mosquito Alert την άδεια για το έργο
+        σας διάρκειας ίσης με τα ισχύοντα πνευματικά δικαιώματα προκειμένου να μπορεί να είναι εκμεταλλεύσιμο το έργο
+        χωρίς κανένα περιορισμό και ότι το εκχωρείτε σε τρίτα πρόσωπα παγκοσμίως χωρίς περιορισμό στο δικαίωμα
         εκμετάλλευσης, χωρίς αποκλειστικότητα και με τη δυνατότητα αδειοδότησης. Σε κάθε περίπτωση, αυτοί οι όροι δεν
-        απαγορευουν στον αρχικό παραγωγό οποιαδήποτε χρήση των έργων του καθώς είναι σε θέση να τα εκμεταλλευτεί με άλλα
-        μέσα με τρόπο συμβατό με την εκχώρηση που παρέχεται από αυτό το έγγραφο.
+        απαγορεύουν στον αρχικό παραγωγό οποιαδήποτε χρήση των έργων του καθώς είναι σε θέση να τα εκμεταλλευτεί με άλλα
+        μέσα με τρόπο συμβατό με την εκχώρηση που παρέχεται από το έγγραφο αυτό.
     </li>
-    <li>Ως γενικός κανόνα, κάθε πρωτότυπη δημιουργία που προστατεύεται από πνευματικά δικαιώματα θα διαδίδεται από το
+    <li>Ως γενικός κανόνας, κάθε πρωτότυπη δημιουργία που προστατεύεται από πνευματικά δικαιώματα θα διαδίδεται από το
         Mosquito Alert με άδεια CC BY, αναφέροντας ανώνυμο συγγραφέα και το όνομα του έργου (παράδειγμα: Anonymous, CC
-        BY Mosquito Alert), ακόμη και αν περιέχει το όνομα του συγγραφέα σε αυτό ή στα μεταδεδομένα του. Όταν είναι
-        δυνατόν, μέρος των βάσεων δεδομένων ή πινάκων που προκύπτουν από συνεισφορές χρηστών θα κυκλοφορήσει, κατά
-        γενικό κανόνα, με άδεια CC0. Σε περίπτωση ανάγκης που πρέπει να δοθεί σε τρίτους η πρόσβαση σε ευαίσθητες
-        πληροφορίες (π.χ. επαγγελματίες που είναι επιφορτισμένοι με την παρακολούθηση και τον έλεγχο των κουνουπιών,
+        BY Mosquito Alert), ακόμη κι αν περιέχει το όνομα του συγγραφέα σ' αυτό ή στα μεταδεδομένα του. Εφόσον είναι
+        δυνατόν, μέρος των βάσεων δεδομένων ή πινάκων, που προκύπτουν από συνεισφορές χρηστών, θα κυκλοφορήσει, κατά
+        γενικό κανόνα, με άδεια CC0. Σε περίπτωση ανάγκης, όπου θα πρέπει να δοθεί σε τρίτους η πρόσβαση σε ευαίσθητες
+        πληροφορίες (π.χ. επαγγελματίες που είναι υπεύθυνοι με την παρακολούθηση και τον έλεγχο των κουνουπιών,
         ερευνητικό προσωπικό, διαχειριστές δημόσιας υγείας κ.λπ.), θα ακολουθηθούν κατάλληλα πρωτόκολλα ή/και άδειες για
         αυτήν την εκχώρηση.
     </li>
-    <li>Εγγυάστε ότι έχετε τα απαραίτητα νομικά δικαιώματα για τα έργα που μοιράζεστε με το Mosquito Alert (πχ
-        δεδομένων, φωτογραφιών και αναφορών σας) και ότι αυτά δεν είναι δυσφημιστικά ή ότι δεν παραβιάζετε κανέναν νόμο.
-        Η συμμετοχή στο Mosquito Alert είναι ανώνυμη προεκειμένου να εγγυηθεί η προστασία της ιδιωτικής ζωής των
-        συμμετεχόντων. Επομένως, εγγυάστε ότι στα έργα σας που στέλνετε στο Mosquito Alert δε θα προσθέσετε προσωπικά
-        στοιχεία του εαυτού σας ή τρίτων. Κατανοείτε ότι τα έργα αυτά ενδέχεται να μεταφερθούν σε τρίτους και ότι το
-        Mosquito Alert δε μπορεί να εγγυηθεί την εξάλειψη προσωπικών δεδομένων που στέλνετε κατά λάθος.
+    <li>Εγγυάστε ότι έχετε τα απαραίτητα νομικά δικαιώματα για τα δεδομένα που μοιράζεστε με το Mosquito Alert (π.χ.
+        δεδομένων, φωτογραφιών και αναφορών σας) και ότι αυτά δεν είναι δυσφημιστικά ή ότι δεν παραβιάζεται κανένας
+        νόμος. Η συμμετοχή στο Mosquito Alert είναι ανώνυμη προκειμένου να εξασφαλιστεί η προστασία της ιδιωτικής ζωής
+        των συμμετεχόντων. Επομένως, εγγυάστε ότι στα έργα σας που στέλνετε στο Mosquito Alert δε θα προσθέσετε
+        προσωπικά στοιχεία του δικά σας ή τρίτων. Κατανοείτε ότι τα έργα αυτά ενδέχεται να μεταφερθούν σε τρίτους και
+        ότι το Mosquito Alert δε μπορεί να εγγυηθεί την εξάλειψη προσωπικών δεδομένων που στέλνονται κατά λάθος.
     </li>
-    <li>Συμφωνείτε να αποζημιώσετε άτομα, ιδρύματα ή/και μέλη του Mosquito Alert και συνεργάτες για οποιαδήποτε νομική
-        ή/και νομισματική επιβάρυνση και οποιαδήποτε άλλη δαπάνη που μπορεί να προκύψει ως αποτέλεσμα της παραβίασης της
-        παραπάνω εγγύησης.
+    <li>Συμφωνείτε να αποζημιώσετε άτομα, ιδρύματα ή/και μέλη του Mosquito Alert ή/και συνεργάτες για οποιαδήποτε νομική
+        ή/και νομισματική επιβάρυνση αλλά και οποιαδήποτε άλλη δαπάνη που μπορεί να προκύψει ως αποτέλεσμα της
+        παραβίασης των παραπάνω όρων εγγύησης.
     </li>
 </ol>
 
