--- a/tigahelp/templates/tigahelp/scoring_el.html
+++ b/tigahelp/templates/tigahelp/scoring_el.html
@@ -14,11 +14,11 @@
 
         <h2>Πληροφορίες για τη Βαθμολογία</h2>
         <p>Οι ενέργειες που πραγματοποιούνται στο Mosquito Alert έχουν αναγνώριση και ανταμοιβές με τη μορφή βαθμών. Ο
-            αριθμός των βαθμών ανά αναφορά ποικίλλει ανάλογα με τις πληροφορίες που παρέχονται και την ποιότητά
+            αριθμός των βαθμών ανά αναφορά ποικίλλει ανάλογα με τις πληροφορίες που παρέχονται καθώς και την ποιότητά
             τους.</p>
-        <p>Οι μέγιστοι βαθμοί που μπορούν να ληφθούν ανά αναφορά είναι τα εξής:</p>
+        <p>Οι μέγιστοι βαθμοί που μπορούν να ληφθούν ανά αναφορά είναι οι εξής:</p>
         <ul>
-            <li>Εισβάλλον χωροκατακτητικό κουνούπι <em> Aedes </em>: 20 βαθμοί</li>
+            <li>Εισβάλλον χωροκατακτητικό κουνούπι <em> Aedes</em>: 20 βαθμοί</li>
             <li>Κοινό κουνούπι: 14 βαθμοί</li>
             <li>Εστία ανάπτυξης/αναπαραγωγής σε αποχετευτικό ομβρίων: 20 βαθμοί</li>
             <li>Άλλη εστία ανάπτυξης/αναπαραγωγής σε δημόσιο χώρο: 16 βαθμοί</li>
@@ -26,10 +26,10 @@
         <p>Επιπλέον, υπάρχουν έξτρα βαθμοί για το πρώτο κουνούπι της περιόδου, την πρώτη αναφορά της ημέρας ή για τη
             συχνή σας συμμετοχή. Όταν φτάσετε σε έναν συγκεκριμένο αριθμό αναφορών, δε παίρνετε μόνο επιπλέον βαθμούς,
             αλλά παίρνετε και βραβεία. Υπάρχουν διαφορετικά βραβεία ανάλογα με τους στόχους που έχουν επιτευχθεί.</p>
-        <p>Οι αναφορές που αποστέλλονται ως κουνούπι αλλά αποδεικνύονται ότι δεν είναι κουνούπια, μετά από την
+        <p>Οι αναφορές που αποστέλλονται για έντομα που τελικώς αποδεικνύονται ότι δεν είναι κουνούπια, μετά από την
             επιβεβαίωση των εμπειρογνωμόνων, δε θα λαμβάνουν βαθμούς. Επίσης, μια φωτογραφία που δεν επιτρέπει στους
-            ειδικούς να αναγνωρίσουν το κουνούπι ή την εστία ανάπτυξής/αναπαραγωγής τους δε θα βαθμολογηθεί.</p>
-        <p>Η συγκέντρωση βαθμών θα σας επιτρέψει να ανεβείτε σε <b>επίπεδο</b>:</p>
+            ειδικούς να αναγνωρίσουν το κουνούπι ή την εστία ανάπτυξής/αναπαραγωγής τους δε θα βαθμολογείται.</p>
+        <p>Η συγκέντρωση βαθμών θα σας επιτρέψει να ανεβείτε σε διάφορα <b>επίπεδα.</b></p>
         <p>Αναλυτικότερα:</p>
         <ul>
             <li>1ο επίπεδο: Αρχάριος (πρωτάρης)</li>
@@ -43,12 +43,12 @@
         <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
         <h2>Πίνακας βαθμολογίας</h2>
-        <p>Η παγκόσμια κατάταξη είναι προσβάσιμη κάνοντας κλικ στη βαθμολογία στην κύρια οθόνη. Πατώντας σε μια θέση
-            κατάταξης εμφανίζεται η ανάλυση των βαθμών που έλαβε ο χρήστης.</p>
-        <p>Κάνοντας κλικ στο "Περισσότερες λεπτομέρειες" μεταβαίνετε στον πίνακα των κατανεμημένων βαθμών.</p>
-        <p>Σε αυτήν την ενότητα υπάρχει μια λίστα με τις αναφορές που αποστέλλονται με τη βαθμολογία που λαμβάνετε σε
-            καθεμία από αυτές. Οι αναφορές είναι διαδραστικές, κάνοντας κλικ μπορείτε να λάβετε την αναλυτική βαθμολογία
-            και την επεξήγηση της βαθμολογίας.</p>
+        <p>Η παγκόσμια κατάταξη είναι προσβάσιμη πατώντας (κλικ) πάνω στη βαθμολογία που βρίσκεται στην κύρια οθόνη.
+            Πατώντας σε μια θέση κατάταξης εμφανίζεται η ανάλυση των βαθμών που έλαβε ο χρήστης.</p>
+        <p>Πατώντας (κλικ) πάνω στη επιλογή "Περισσότερες λεπτομέρειες" μεταβαίνετε στον πίνακα των βαθμών.</p>
+        <p>Σε αυτήν την ενότητα υπάρχει μια λίστα με τις αναφορές που αποστέλλονται και με τη βαθμολογία που λαμβάνετε
+            σε καθεμία από αυτές. Οι αναφορές είναι διαδραστικές και μπορείτε πατώντας πάνω τους (κλικ) να δείτε την
+            αναλυτική βαθμολογία και την επεξήγηση της βαθμολογίας.</p>
 
     </div>
 </div>
