--- a/tigahelp/templates/tigahelp/scoring_sq.html
+++ b/tigahelp/templates/tigahelp/scoring_sq.html
@@ -18,8 +18,8 @@ Mosquito Alert Score Info
         <ul>
             <li>Mushkonja invazive Aedes: 20 pikë</li>
             <li>Mushkonja e zakonshme: 14 pikë</li>
-            <li>Vende ku rriten si puseta/kanalizime: 20 pikë</li>
-            <li>Vende ku rriten të tjera në zona publike: 16 pikë</li>
+            <li>Vendrritje si puseta/kanalizime: 20 pikë</li>
+            <li>Vendrritje të tjera në zona publike: 16 pikë</li>
         </ul>
         <p></p>
         <p>Përveç kësaj, ka bonuse shtesë për mushkonjën e parë të sezonit, raportin e parë të ditës ose për
