--- a/tigahelp/templates/tigahelp/terms_sq.html
+++ b/tigahelp/templates/tigahelp/terms_sq.html
@@ -13,31 +13,32 @@ Marrëveshja e Përdoruesit
 </div>
 
 <p>Aplikacioni "Mosquito Alert" (me emrat që mund të ketë patur në të shkuarën ose mund të ketë në të ardhmen), është
-    një sistem i shkencës qytetare drejtuar nga QendraKërkimoreKëshillimoreKombëtare Spanjolle për Studime të Avancuara
-    e Blanes(CEAB-CSIC), Qendra për Kërkime tëAplikuara Ekologjike dhe Pyjore, Univeritet Pompeu Fabra (UPF) dhe
-    Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).</p>
-<p>Aplikacioni "Mosquito Alert" varet nga mbledhja e të dhënave publike mbi lloje të ndryshme mushkonjash si vektorë
-    tësëmundjeve. Qytetarët marrin pjesë duke dërguar dhe shpërndarë të dhëna dhe imazhe (fotografi), nëpërmjet
-    aplikacionit "Mosquito Alert" me anë tëpajisjeve celulare dhe pajisjeve të tjera elektronike. Pjesëmarrësit
-    (qytetarët)duhet të jenë të rritur ose duhet të marrin pjesë nën mbikqyrjen e një të rrituri, në përputhje me
-    legjislacionin e Spanjës dhe të vendin të tyre të qëndrimit. Pjesëmarrësit (qytetarët)duhet të pranojnë gjithashtu
-    politikat e privatësisë sëAplikacionit "Mosquito Alert"dhe të jenë dakord me termat e përdorimt si më poshtë:</p>
+    një sistem i shkencës qytetare drejtuar nga Qendra Kërkimore Këshillimore Kombëtare Spanjolle për Studime të
+    Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore, Univeritet Pompeu Fabra (UPF)
+    dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).</p>
+<p>Aplikacioni "Mosquito Alert" varet nga mbledhja e të dhënave publike mbi lloje të ndryshme mushkonjash si vektorë të
+    sëmundjeve. Qytetarët marrin pjesë duke dërguar dhe shpërndarë të dhëna dhe imazhe (fotografi), nëpërmjet
+    aplikacionit "Mosquito Alert" me anë të pajisjeve celulare dhe pajisjeve të tjera elektronike. Pjesëmarrësit
+    (qytetarët) duhet të jenë të rritur ose duhet të marrin pjesë nën mbikqyrjen e një të rrituri, në përputhje me
+    legjislacionin e Spanjës dhe të vendin të tyre të qëndrimit. Pjesëmarrësit (qytetarët) duhet të pranojnë gjithashtu
+    politikat e privatësisë së Aplikacionit "Mosquito Alert" dhe të jenë dakord me termat e përdorimt si më poshtë:</p>
 <ol>
     <li>Llojet e mushkonjave që Aplikacioni "Mosquito Alert" punon mund të jenë vektorë të sëmundjeve si dengue,
-        chikungunya dhe Zika. Aplikacioni "Mosquito Alert"kontribuon në luftimin e këtyre sëmundjeve, duke mbledhur të
+        chikungunya dhe Zika. Aplikacioni "Mosquito Alert" kontribuon në luftimin e këtyre sëmundjeve, duke mbledhur të
         dhëna dhe imazhe, duke analizuar informacione dhe duke kryer ndërgjegjësimin publik, monitorimin dhe kontrollin
         e aktivitetit të mushkonjave. Duke qenë se këto mushkonja janë vektorë të sëmundjeve, me pjesëmarrjen në
-        Aplikacionin "Mosquito Alert"duhet të ushtroni kujdes ekrtrem dhe nuk duhet që ju t'i kërkoni vetëkëto lloje
+        Aplikacionin "Mosquito Alert" duhet të ushtroni kujdes ekrtrem dhe nuk duhet që ju t'i kërkoni vetë këto lloje
         mushkonjash (në mënyrë direkte ose nëpërmjet vendeve ku ato rriten), veçanërisht në vendet ku sëmundjet që ato
         transmetojnë janë endemike ose gjatë shpërthimit të një sëmundje të tillë. Pjesëmarrja në Aplikacionin "Mosquito
-        Alert"mund të përfshijë raportimin e përballjeve që ju mund tëkeni me mushkonjat gjatë aktivitetit tuaj ditor
-        dhe ndryshimit tëaktivitetit tuaj për të reduktuar ekspozimin ndaj mushkonjave dhe vendeve ku ato rriten. Ju
-        pranoni se nëçdo rast nuk do të rrisni ekspozimin tuaj ndaj mushkonjave nga pjesëmarrja në këtë projekt.
+        Alert" mund të përfshijë raportimin e përballjeve që ju mund të keni me mushkonjat gjatë aktivitetit tuaj ditor
+        dhe ndryshimit të aktivitetit tuaj për të reduktuar ekspozimin ndaj mushkonjave dhe vendeve ku ato rriten
+        (vendrritjet). Ju pranoni se në çdo rast nuk do të rrisni ekspozimin tuaj ndaj mushkonjave nga pjesëmarrja në
+        këtë projekt.
     </li>
     <li>Me shpërndajen e të dhënave dhe punën tuaj (p.sh. fotografi) me Aplikacionin "Mosquito Alert", ju jeni dakord me
         termat e përdorimit, ju pranoni që puna (p.sh. fotografitë) të shpërndahet anonimisht pa përmendur emrin ose
         pseudonimin tuaj dhe ju i siguroni Institucioneve që drejtojnë këtë aplikacion, një licensë për punën tuaj për
-        kohëzgjatjen e barabartë me të drejtat e zbatueshme në fuqi të autorit për të qenë në gjendje për tëeksploruar
+        kohëzgjatjen e barabartë me të drejtat e zbatueshme në fuqi të autorit për të qenë në gjendje për të eksploruar
         punën pa ndonjë kufizim, si edhe t'i'a caktojë atë palëve të treta në botë, pa pagesë, joekskluzive dhe të
         nënlicensueshme. Në çdo rast këto terma nuk nënkuptojnë për autorin origjinal ndonjë kufizim në përdorimin e
         punës së tij/saj, duke patur të mundur shfrytëzimin e punëve tuaja me mjete të tjera në një mënyrë të pajtueshme
@@ -53,14 +54,14 @@ Marrëveshja e Përdoruesit
         të përshtatshme dhe/ose licensa.
     </li>
     <li>Ju garantoni se keni të drejtat e nevojshme ligjore mbi të dhënat dhe punën që ju shpërndani me Aplikacionin
-        "Mosquito Alert"dhe që këto nuk janë shpifje dhe që nuk shkelin ndonjë ligj. Pjesëmarrja në Aplikacionin
-        "Mosquito Alert"është anonime për të garantuar mbrojtjen e privatësisë së pjesëmarrësve (qytetarëve).
+        "Mosquito Alert" dhe që këto nuk janë shpifje dhe që nuk shkelin ndonjë ligj. Pjesëmarrja në Aplikacionin
+        "Mosquito Alert" është anonime për të garantuar mbrojtjen e privatësisë së pjesëmarrësve (qytetarëve).
         Megjithatë, ju garantoni që nuk do të shtoni informacione personale tuajat ose të palëve të treta në punën dhe
         të dhënat që do të dërgoni tek Aplikacionin "Mosquito Alert". Ju kuptoni se këto punë dhe të dhëna mund t'iu
-        transferohen palëve të treta, dhe që Aplikacioni "Mosquito Alert"nuk mund të garantojë mundësinë e eleminimit të
-        ndonjë të dhëne personale që ju dërgoni gabimisht.
+        transferohen palëve të treta, dhe që Aplikacioni "Mosquito Alert" nuk mund të garantojë mundësinë e eleminimit
+        të ndonjë të dhëne personale që ju dërgoni gabimisht.
     </li>
-    <li>Ju jeni dakord të dëmshpërbleni individët, institucionet dhe/ose anëtarët e Aplikacionit "Mosquito Alert"dhe
+    <li>Ju jeni dakord të dëmshpërbleni individët, institucionet dhe/ose anëtarët e Aplikacionit "Mosquito Alert" dhe
         bashkëpunëtorëve për ndonjë detyrim ligjor dhe/ose monetar dhe çdo shpenzim tjetër që mund të pësohet si
         rezultat i shkeljeve tuaja të garancive të mësipërme.
     </li>
