--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -201,6 +201,9 @@
                         <ul class="nav navbar-nav navbar-right">
                             {% block navbar_right_items %}
                             {% endblock %}
+                            <li>
+                                <a href="{% url 'predefined_messages' %}" target="_blank">Predefined texts</a>
+                            </li>
                             {% if tasks_per_page_choices %}
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports per page<span class="caret"></span></a>
@@ -225,8 +228,7 @@
 
 
                             <li><p class="navbar-text">{{ request.user.username }}</p></li>
-                            <li><a href="{% url "auth_logout" %}">logout</a>
-                            </li>
+                            <li><a href="{% url "auth_logout" %}">logout</a></li>
                         </ul>
 
 
