Continuing work on notif interface

--- a/tigacrafting/templates/tigacrafting/notifications_version_two.html
+++ b/tigacrafting/templates/tigacrafting/notifications_version_two.html
@@ -88,10 +88,9 @@
 <div id="dialog-message-validation" title="There are some problems with your request...">
     <p>You can't send the notification(s) yet because:</p>
     <ul>
-        <li>Either you have chosen to send the message to a few users and selected no ids in the user id box</li>
-        <li>... or the 'Message title(es)' is blank</li>
-        <li>... or the 'Message body(es)' is blank</li>
-        <li>... or you have chosen to send the message to everyone, in which case you must fill messages for all languages</li>
+        <li>Either you have chosen to send the message to a few users and selected topics in the topic drop box</li>
+        <li>... or the 'Message title(en)' is blank</li>
+        <li>... or the 'Message body(en)' is blank</li>
     </ul>
     <p>Fill these fields and try again please.</p>
 </div>
@@ -151,7 +150,7 @@
             <div class="row">
                 <div class="text-left col-md-4">
                     <label>Native message is written in:</label>
-                    <select>
+                    <select id="native_lang">
                         <option value="">-----</option>
                         {% for lang in languages %}
                         <option value="{{ lang.code }}">{{ lang.name }}</option>
