Validation in notification screen done

--- a/tigacrafting/templates/tigacrafting/notifications_version_two.html
+++ b/tigacrafting/templates/tigacrafting/notifications_version_two.html
@@ -86,13 +86,13 @@
 </div>
 
 <div id="dialog-message-validation" title="There are some problems with your request...">
-    <p>You can't send the notification(s) yet because:</p>
+    <!--<p>You can't send the notification(s) yet because:</p>
     <ul>
         <li>Either you have chosen to send the message to a few users and selected topics in the topic drop box</li>
         <li>... or the 'Message title(en)' is blank</li>
         <li>... or the 'Message body(en)' is blank</li>
     </ul>
-    <p>Fill these fields and try again please.</p>
+    <p>Fill these fields and try again please.</p>-->
 </div>
 
 
