Fixed javascript version typo

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -2395,7 +2395,7 @@
     </script>
 
     <script src={% static "tigacrafting/categories_combo.js" %}></script>
-    <script src={% static "tigacrafting/macro_messages.js?1" %}></script>
+    <script src={% static "tigacrafting/macro_messages.js" %}></script>
 
 
 {% endblock %}
