--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -12,6 +12,7 @@
         .grid-item-large { background-color: grey; height: 180px; width: 380px; float: left; margin-top: 5px;margin-bottom: 5px; overflow:auto; padding: 10px 10px 10px 10px;}
 
         .fastCheck {background-color: lightgray; margin-bottom: 10px; height: 40px;}
+        .other_sp {background-color: lightgray; margin-bottom: 10px; height: 40px;}
 
         .grid { /*border-style:solid; border-width: 1px;*/ background-color: lightgray; margin-top: 10px;}
         .frame {position: absolute;margin: auto;top: 0;left: 0;right: 0;bottom: 0;}
@@ -166,9 +167,19 @@
     <div class="row">
         <div id="dialogConfirmUpPhoto" title="Warning">
             <p class="infoPopup">
-                <span>The following reports have been marked as 'fast upload':</span><br>
-                <span class="reportIDs"></span>
-                <span>and will be published on the map this same day at around midnight. Are you sure you want to proceed?</span>
+                <div id="fastupload_info" style="display:none;">
+                    <p>These following reports have been marked as 'fast upload':</p>
+                    <p class="reportIDs"></p>
+                    <p>and will be published on the map this same day at around midnight.</p>
+                </div>
+                <hr>
+                <div id="othersp_info" style="display:none;">
+                    <p>These reports have been marked as 'other species':</p>
+                    <p class="otherIDs"></p>
+                    <p>and will be automatically validated as 'other species' and will also be published on the map</p>
+                </div>
+                <hr>
+                <p class="text-danger">Are you sure you want to proceed?</p>
             </p>
         </div>
 
@@ -215,6 +226,11 @@
                 <label>Fast Upload</label>
                 {{ form.fastUpload }}
             </div>
+        {% elif form.instance.type == 'adult' and form.instance.hide == False %}
+            <div id="{{ form.instance.version_UUID }}" class="other_sp {{form.instance.type}}" style="">
+                <label>Other species</label>
+                {{ form.other_species }}
+            </div>
         {% endif %}
 
 
@@ -257,7 +273,7 @@
     {% endif %}
 </div>
 
-<script src="{% static 'tigacrafting/javascript/fastSavingButton.js' %}"></script>
+<script src="{% static 'tigacrafting/javascript/fastSavingButton.js' %}?v=3"></script>
 </body>
 <script>
         function background_save(qp) {
