Added v to javascript file to force reload

--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -281,8 +281,8 @@
 
 </div>
 
-<script src="{% static 'tigacrafting/javascript/fastSavingButton.js' %}"></script>
-<script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}?v=3"></script>
+<script src="{% static 'tigacrafting/javascript/fastSavingButton.js' %}?v=1"></script>
+<script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}?v=1"></script>
 </body>
 <script>
         var current_page = '{{ objects.number }}';
