Fixed max lenght of version uuid list

--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -27,6 +27,7 @@
         li.miniform > span > span { color: white; }
         .mustfix { border-top-color: red; border-top-style: solid; border-top-width: 10px; }
         .fixids ul li { white-space:nowrap; }
+        .collapse_ul { max-height: 100px; overflow: auto; }
     </style>
     <script src="{% static 'tigacrafting/jquery/1.11.1/jquery.min.js' %}"></script>
     <script src="{% static 'tigacrafting/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
@@ -281,7 +282,7 @@
 
 </div>
 
-<script src="{% static 'tigacrafting/javascript/fastSavingButton.js' %}?v=1"></script>
+<script src="{% static 'tigacrafting/javascript/fastSavingButton.js' %}?v=2"></script>
 <script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}?v=1"></script>
 </body>
 <script>
