--- a/tigacrafting/templates/tigacrafting/notifications_version_two.html
+++ b/tigacrafting/templates/tigacrafting/notifications_version_two.html
@@ -91,6 +91,7 @@
         <li>Either you have chosen to send the message to a few users and selected topics in the topic drop box</li>
         <li>... or the 'Message title(en)' is blank</li>
         <li>... or the 'Message body(en)' is blank</li>
+        <li>... or you must confirm you are aware of the implications of sending to everybody</li>
     </ul>
     <p>Fill these fields and try again please.</p>-->
 </div>
@@ -123,7 +124,9 @@
             </div>
             <h3>Send message to everyone</h3>
             <div>
-                <p>{{ total_users }} messages will be sent</p>
+                <p>A notification will be sent to all the application users, please proceed carefully.</p>
+                <p>I understand the implications<input id="implications_checkbox" type="checkbox"></p>
+                
             </div>
         </div>
         <h3>2 - Do you want the message to also generate an iconic notification, that the user will see even if the app is turned off?:</h3>
@@ -132,7 +135,7 @@
             <input type="radio" name="rb" id="radio-2">No
         </div>
         <h3>3 - Compose the message you want to send below. Only (en) section is mandatory. Please, remember to check your spelling!:</h3>
-        <div style="background:#ffcc66;padding:20px;margin:15px;">
+        <div style="background:#ff6666;padding:20px;margin:15px;">
             <div class="row">
                 <div class="text-left col-md-4"><label>Message title(EN):</label></div>
             </div>
